<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="@dimen/_2sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_white"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <TextView
            android:id="@+id/tvReview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="right"
            android:layout_margin="@dimen/_5sdp"
            android:text="@string/write_review"
            android:textAllCaps="true"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvNote"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_26sdp"
            android:layout_marginTop="@dimen/_26sdp"
            android:background="@drawable/bg_round_white"
            android:gravity="center"
            android:text="@string/write_first_review"
            android:textColor="@color/colorMain"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvReview"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <!--        <Button
                    android:id="@+id/bMoreReview"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_13sdp"
                    android:background="@null"
                    android:fontFamily="sans-serif"
                    android:text="@string/show_all_review"
                    android:textAllCaps="true"
                    android:textColor="@color/eventIconColor"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="bold"
                    android:visibility="gone"/>-->
        <Button
            android:id="@+id/bMoreReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_13sdp"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:text="@string/show_all_review"
            android:textAllCaps="true"
            android:textColor="@color/eventIconColor"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            android:visibility="gone"/>
    </LinearLayout>
</android.support.v7.widget.CardView>